force-app/main/default/objects/Prestacion__c/Prestacion__c.object-meta.xml
<CustomObject>
    <label>Prestación</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Número de Prestación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prestaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>