force-app/main/default/objects/Prestacion__c/fields/Ap__c.field-meta.xml
<CustomField>
    <fullName>Ap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ap</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Prestaciones</relationshipName>
    <type>Lookup</type>
</CustomField>