force-app/main/default/objects/Prestacion__c/fields/Ap_Sub_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Ap_Sub_Tipo__c</fullName>
    <formula>TEXT(Ap__r.Sub_tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ap Sub Tipo</label>
    <type>Text</type>
</CustomField>