force-app/main/default/objects/Prestacion__c/fields/Cambio_automatico__c.field-meta.xml
<CustomField>
    <fullName>Cambio_automatico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se utiliza para saber si el cambio se esta haciendo desde codigo apex o manualmente. Para poder saltar validaciones.</description>
    <label>Cambio automatico</label>
    <type>Checkbox</type>
</CustomField>