force-app/main/default/objects/Prestacion__c/fields/Codigo_Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Nomenclador__c</fullName>
    <formula>Prestacion__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Nomenclador</label>
    <type>Text</type>
</CustomField>