force-app/main/default/objects/Prestacion__c/fields/Contexto__c.field-meta.xml
<CustomField>
    <fullName>Contexto__c</fullName>
    <label>Contexto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>