force-app/main/default/objects/Prestacion__c/fields/Descripcion_De_La_Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_De_La_Prestacion__c</fullName>
    <description>Campo requerido por el Equipo de Administración de Convenios para poder transcribir la descripción de Prestación autorizada en los casos que contengan en prestación cód. 503101 (código para presupuestos) con el fin de lograr obtenerlo como filtro para la realización de informes- JIRA DES-166</description>
    <inlineHelpText>Campo utilizado por el Equipo de Administración de Convenios para transcribir la descripción de prestación autorizada en prestaciones con cód. 503101 (código para presupuestos), con la finalidad de obtener reportes sobre el mismo.</inlineHelpText>
    <label>Descripción de la Prestación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>