force-app/main/default/objects/Prestacion__c/fields/Descripcion_Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Nomenclador__c</fullName>
    <formula>Prestacion__r.Descripcion_tipo_nomenclador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Nomenclador</label>
    <type>Text</type>
</CustomField>