force-app/main/default/objects/Prestacion__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1-----A</fullName>
                <label>EN AUDITORÍA</label>
            </value>
            <value>
                <fullName>C1-----G</fullName>
                <label>GENERADO</label>
            </value>
            <value>
                <fullName>C1----AS</fullName>
                <label>AUTORIZADO POR EL SISTEMA</label>
            </value>
            <value>
                <fullName>C1---RSA</fullName>
                <label>RECHAZADO POR EL SISTEMA AL AFILIADO</label>
            </value>
            <value>
                <fullName>C1---RSP</fullName>
                <label>RECHAZADO POR EL SISTEMA AL PRESTADOR</label>
            </value>
            <value>
                <fullName>C1EA--AA</fullName>
                <label>AUTORIZADO POR EL AUDITOR</label>
            </value>
            <value>
                <fullName>C1EA-RAA</fullName>
                <label>RECHAZADO POR EL AUDITOR AL AFILIADO</label>
            </value>
            <value>
                <fullName>C1EA-RAP</fullName>
                <label>RECHAZADO POR EL AUDITOR AL PRESTADOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>