force-app/main/default/objects/Prestacion__c/fields/Importe_cargo_al_socio_sys__c.field-meta.xml
<CustomField>
    <fullName>Importe_cargo_al_socio_sys__c</fullName>
    <label>Importe cargo al socio sys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>