force-app/main/default/objects/Prestacion__c/fields/Importe_convenio_auditor__c.field-meta.xml
<CustomField>
    <fullName>Importe_convenio_auditor__c</fullName>
    <label>Importe convenio auditor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>