force-app/main/default/objects/Prestacion__c/fields/Importe_plan_auditor__c.field-meta.xml
<CustomField>
    <fullName>Importe_plan_auditor__c</fullName>
    <label>Importe plan auditor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>