force-app/main/default/objects/Prestacion__c/fields/Importe_plan_sys__c.field-meta.xml
<CustomField>
    <fullName>Importe_plan_sys__c</fullName>
    <label>Importe plan sys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>