force-app/main/default/objects/Prestacion__c/fields/Medicamento__c.field-meta.xml
<CustomField>
    <fullName>Medicamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicamento</label>
    <referenceTo>Medicamento__c</referenceTo>
    <relationshipLabel>Prestaciones</relationshipLabel>
    <relationshipName>Prestaciones</relationshipName>
    <type>Lookup</type>
</CustomField>