force-app/main/default/objects/Prestacion__c/fields/Nombre_de_Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Prestacion__c</fullName>
    <label>Nombre de Prestación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>