force-app/main/default/objects/Prestacion__c/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestación</label>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipName>Prestaciones</relationshipName>
    <type>Lookup</type>
</CustomField>