force-app/main/default/objects/Prestacion__c/fields/Prestacion_CA__c.field-meta.xml
<CustomField>
    <fullName>Prestacion_CA__c</fullName>
    <externalId>true</externalId>
    <label>Prestacion CA</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>