force-app/main/default/objects/Prestacion__c/fields/Texto_aclarativo_alerta__c.field-meta.xml
<CustomField>
    <fullName>Texto_aclarativo_alerta__c</fullName>
    <label>Texto aclarativo Alerta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>