force-app/main/default/objects/Prestacion__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Nomenclador</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medicamento</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Grupo de prestacion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>