force-app/main/default/objects/Prestacion__c/validationRules/Front_no_puede_crear_con_codigo_02503101.validationRule-meta.xml
<ValidationRule>
    <fullName>Front_no_puede_crear_con_codigo_02503101</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$Profile.Name = &apos;Front&apos;,
				Codigo_Nomenclador__c = &apos;02503101&apos;
)</errorConditionFormula>
    <errorMessage>Los usuarios Front no puede carga ese numero de nomenclador</errorMessage>
</ValidationRule>