force-app/main/default/objects/Prestacion__c/validationRules/No_cargar_material_sin_subtipo.validationRule-meta.xml
<ValidationRule>
    <fullName>No_cargar_material_sin_subtipo</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	AND(
		NOT(ISNEW()),
		OR (
			AND(
				NOT(BEGINS(Codigo_Nomenclador__c, &apos;70&apos;)),
				BEGINS(PRIORVALUE(Codigo_Nomenclador__c) , &apos;70&apos;),
				ISPICKVAL(Ap__r.Sub_tipo__c, &apos;Material&apos;)
			),
			AND(
				BEGINS(Codigo_Nomenclador__c,&apos;70&apos;),
				NOT(ISPICKVAL(Ap__r.Sub_tipo__c, &apos;Material&apos;)),
				PRIORVALUE(Ap_Sub_Tipo__c) = &apos;Material&apos;
			)
		)
	),
	AND(
		ISNEW(),
		OR(
			AND(
				BEGINS(Codigo_Nomenclador__c, &apos;70&apos;),
				NOT(ISPICKVAL(Ap__r.Sub_tipo__c, &apos;Material&apos;))
			),
			AND(
				NOT(BEGINS(Codigo_Nomenclador__c, &apos;70&apos;)),
				ISPICKVAL(Ap__r.Sub_tipo__c,&apos;Material&apos;)
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>Al cargar un código de nomenclador de tipo Material, debe marcar el Subtipo como Material</errorMessage>
</ValidationRule>