force-app/main/default/objects/Prestacion__c/validationRules/No_crear_prestacion_de_seguimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>No_crear_prestacion_de_seguimiento</fullName>
    <active>false</active>
    <description>Evita crear prestaciones manuales de ap tipo de registro seguimiento</description>
    <errorConditionFormula>AND(
				 $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, 
				ISNEW())</errorConditionFormula>
    <errorMessage>No se puede crear prestaciones de AP de tipo Seguimiento</errorMessage>
</ValidationRule>