force-app/main/default/objects/Prestacion__c/validationRules/validar_estado_del_caso_al_crear.validationRule-meta.xml
<ValidationRule>
    <fullName>validar_estado_del_caso_al_crear</fullName>
    <active>true</active>
    <description>No permite cargar prestaciones nuevas al caso si el estado del mismo es distinto a &quot;Generada&quot;</description>
    <errorConditionFormula>AND(
    ISNEW(),
				$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
    ISBLANK( Prestacion_CA__c ),  
				NOT( ISBLANK( Ap__c ) ),  
    NOT( ISPICKVAL( Ap__r.Status, &apos;CA-----G&apos;) )
)</errorConditionFormula>
    <errorMessage>Solo se permiten crear prestaciones si el caso está en estado &quot;Generada&quot;</errorMessage>
</ValidationRule>