force-app/main/default/objects/Prestacion__c/validationRules/Validar_estado_medicamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_estado_medicamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Medicamento__c)),
    NOT(ISPICKVAL(Medicamento__r.Estado_Presentacion__c, &apos;A&apos;))
)</errorConditionFormula>
    <errorDisplayField>Medicamento__c</errorDisplayField>
    <errorMessage>El estado del medicamento debe ser: (A) dado de Alta</errorMessage>
</ValidationRule>