force-app/main/default/objects/Prestacion__c/validationRules/Validar_estado_nomenclador.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_estado_nomenclador</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Prestacion__c)),
    NOT(ISPICKVAL(Prestacion__r.Estado__c, &apos;A&apos;))
)</errorConditionFormula>
    <errorDisplayField>Prestacion__c</errorDisplayField>
    <errorMessage>El estado del nomenclador debe ser: (A) dado de Alta</errorMessage>
</ValidationRule>