force-app/main/default/objects/Prestacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Nomenclador__c</columns>
    <columns>Estado__c</columns>
    <columns>Descripcion_Nomenclador__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codigo_Nomenclador__c</field>
        <operation>equals</operation>
        <value>02503101</value>
    </filters>
    <label>Todos</label>
</ListView>